# django-backend

./: pyproject.toml
api/: core.py  models.py  serializers.py  urls.py  views.py
api/core/: algorithms.py  converters.py  exceptions.py
config/: settings.py  urls.py
