[tool.poetry]
name = "django-backend"
version = "0.1.0"
description = ""
authors = ["Hepheir <hepheir@gmail.com>"]
readme = "README.md"
packages = [{include = "django_backend"}]

[tool.poetry.dependencies]
python = "^3.7"
django = "^4.2.4"
djangorestframework = "^3.14.0"
pandas = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
