[tool.poetry]
name = "django-backend"
version = "0.1.0"
description = ""
authors = ["Hepheir <hepheir@gmail.com>"]
readme = "README.md"
packages = [{include = "django_backend"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
django = "^4.2.4"
djangorestframework = "^3.14.0"
pandas = "^2.1.0"
xlrd = "^2.0.1"
opencv-python = "^4.8.0.76"
opencv-contrib-python = "^4.8.0.76"
colorgram-py = "^1.2.0"
pillow = "^10.0.0"
colour-science = "^0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
